test/com/sun/jdi/PrivateTransportTest.sh: ERROR: transport library missing onLoad entry: private_dt_socket

XMLWordPrintable

    • b82
    • Not verified

        This bug affects the following test:

            com/sun/jdi/PrivateTransportTest.sh

        ACTION: shell -- Failed. Execution failed: exit code 134
        REASON: User specified action: run shell PrivateTransportTest.sh
        TIME: 0.146 seconds
        messages:
        command: shell PrivateTransportTest.sh []
        reason: User specified action: run shell PrivateTransportTest.sh
        elapsed time (seconds): 0.146
        STDOUT:
        JDK under test is: /home/staffan/mercurial/jdk8-tl/build/linux-x86_64-normal-server-release/jdk
        Setup private transport library by copying an existing one and renaming
        cp /home/staffan/mercurial/jdk8-tl/build/linux-x86_64-normal-server-release/jdk/lib/amd64/libdt_socket.so /home/staffan/mercurial/jdk8-tl/JTwork/classes/com/sun/jdi/libprivate_dt_socket.so
        LD_LIBRARY_PATH=/home/staffan/mercurial/jdk8-tl/JTwork/classes/com/sun/jdi
        /home/staffan/mercurial/jdk8-tl/build/linux-x86_64-normal-server-release/jdk/bin/java -agentlib:jdwp=transport=private_dt_socket,server=y,suspend=n -classpath "/home/staffan/mercurial/jdk8-tl/JTwork/classes/com/sun/jdi" HelloWorld
        FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_LOAD(196)
        test status for was: 134
        The test failed :-(
        exit status was 134
        STDERR:
        ERROR: transport library missing onLoad entry: private_dt_socket
        ERROR: JDWP Transport private_dt_socket failed to initialize, TRANSPORT_LOAD(509)
        JDWP exit error AGENT_ERROR_TRANSPORT_LOAD(196): No transports initialized [debugInit.c:750]
        Aborted (core dumped)
        unspecified test failure

              Assignee:
              Staffan Larsen (Inactive)
              Reporter:
              Staffan Larsen (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: